# telod

./: .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: settings.py
telod/: admin.py  apps.py  bot.py  models.py
telod/management/commands/: fetch_data.py  run_telegram_bot.py
telod/migrations/: 0001_initial.py  0002_alter_medicinename_name.py  0003_medicine_main_name_alter_medicinename_medicine.py  0004_alter_medicine_main_name.py
